--- a/Assignment1_Task01.ipynb
+++ b/Assignment1_Task01.ipynb
@@ -105,25 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Text: Fatma\n",
-      "Original String is  Fatma \n",
+      "Enter Text: pynative\n",
+      "Original String is  pynative \n",
       "\n",
       "Printing only even index chars\n",
       "\n",
-      "F\n",
+      "p\n",
+      "\n",
+      "\n",
+      "n\n",
       "\n",
       "\n",
       "t\n",
       "\n",
       "\n",
-      "a\n"
+      "v\n",
+      "\n"
      ]
     }
    ],
@@ -157,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emma appeared  0  times\n"
+      "Emma appeared  2  times\n"
      ]
     }
    ],
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +413,7 @@
        "[40, 25, 60, 35, 90]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +489,7 @@
        "6000.0"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +590,7 @@
    ],
    "source": [
     "def half_pyramid(m_range):\n",
-    "    help_print(m_range,m_range)\n",
+    "    help_print_pyramid(m_range,m_range)\n",
     "    \n",
     "def help_print_pyramid(m_range, index):\n",
     "    if(index == 0):\n",
@@ -611,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -635,15 +639,6 @@
     "print(exponent(2, 5))\n",
     "print(exponent(5, 4))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
